--- a/inspec.yml
+++ b/inspec.yml
@@ -1,7 +1,7 @@
-name: {{plan_name}}
-title: Habitat Core Plan {{plan_name}}
+name: raml2html
+title: Habitat Core Plan raml2html
 maintainer: humans@habitat.sh
-summary: InSpec controls for testing Habitat Core Plan {{plan_name}}
+summary: InSpec controls for testing Habitat Core Plan raml2html
 copyright: humans@habitat.sh
 copyright_email: humans@habitat.sh
 version: 0.1.0
